Wed Aug 19 00:10:58 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.6-pre1.
	* po/man-db.pot, po/*.po: Update.

Tue Aug 18 23:53:50 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/Makefile.am (dist_check_SCRIPTS): Distribute test files.

Tue Aug 18 23:39:28 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/Makefile: Remove; accidentally added to revision
	  control.
	* .bzrignore: Ignore src/tests/Makefile.

Tue Aug 18 09:47:50 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): Convert text to UTF-8 and then (if
	  necessary) to the target encoding. This allows us to distinguish
	  between "text not in input encoding" and "characters not
	  representable in output encoding" (Debian bug #514963).
	* src/tests/manconv-2: Add test for this and some other possible
	  encoding-handling bugs in manconv.
	* src/tests/Makefile.am (TESTS): Add manconv-2.
	* NEWS: Document this.

Mon Aug 17 18:32:04 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh (init): New function.
	  (finish): Honour TEST_FAILURE_KEEP environment variable.
	* src/tests/manconv-1: Use init function. Reverse diff arguments so
	  that failure output makes more sense.

Mon Aug 17 00:56:20 BST 2009  Colin Watson  <cjwatson@debian.org>

	* NEWS: Update.

Mon Aug 17 00:38:12 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (conversion_table): New table, with contents
	  mostly borrowed from groff's preconv.
	  (convert_encoding): New function.
	  (check_preprocessor_encoding): Loop through semicolon-separated
	  tags, and convert Emacs coding tags to ones that libiconv
	  understands (Debian bug #496604).
	* src/tests/manconv-1: Test multiple tags. Test coding aliases.

Sun Aug 16 23:52:38 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh: Add a simple test library, to be extended as
	  necessary.
	* src/tests/manconv-1: Use it.
