@@ -1,0 +1,18 @@
+#! /bin/sh
+
+# Basic lexgrog tests.
+
+: ${srcdir=.}
+. "$srcdir/testlib.sh"
+
+: ${LEXGROG=lexgrog}
+
+init
+
+write_page lextest 1 "$tmpdir/usr/share/man/man1/lextest.1.gz" UTF-8 gz '' \
+	'lextest \- simple lexgrog test'
+echo "$tmpdir/usr/share/man/man1/lextest.1.gz: \"lextest - simple lexgrog test\"" >"$tmpdir/1.exp"
+$LEXGROG "$tmpdir/usr/share/man/man1/lextest.1.gz" >"$tmpdir/1.out"
+expect_pass 'simple lexgrog test' 'diff "$tmpdir/1.exp" "$tmpdir/1.out"'
+
+finish
