@@ -1,3 +1,9 @@
+Wed Aug 19 12:17:25 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/tests/testlib.sh (write_page): New function.
+	* src/tests/lexgrog-1: New (fairly trivial) test.
+	* src/tests/Makefile.am (TESTS): Add lexgrog-1.
+
 Wed Aug 19 00:10:58 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.5.6-pre1.
